syntax = "proto3";
package sonrio.sonr.registry;

option go_package = "github.com/sonr-io/sonr/x/registry/types";

option java_package = "io.sonr.types.registry";
option java_multiple_files = true;

message DIDDocument {
  repeated string context = 1; // optional
  string id = 2;
  repeated string controller = 3; //optional
  repeated VerificationMethod verification_method = 4; // optional
  repeated string authentication = 5; // optional
  repeated string assertion_method = 6; // optional
  repeated string capability_invocation = 7; // optional
  repeated string capability_delegation = 8; // optional
  repeated string key_agreement = 9; // optional
  repeated Service service = 10; // optional
  repeated string also_known_as = 11; // optional
}

message VerificationMethod {
  string id = 1;
  string type = 2;
  string controller = 3;
  repeated KeyValuePair public_key_jwk = 4; // optional
  string public_key_base58 = 5; // optional
  bytes credential_json = 6; // optional
}

message Service {
  string id = 1;
  string type = 2;
  repeated KeyValuePair service_endpoint = 3;
}

message KeyValuePair {
  string key = 1;
  string value = 2;
}
